--- a/1091.html
+++ b/1091.html
@@ -53,7 +53,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <!--默认使用极速内核：针对国内浏览器产商-->
 <meta name="renderer" content="webkit">
-<title>（第三阶段 美篇）2021年世行贷款村小、教学点教师全科教学能力提升培训&nbsp;|&nbsp;老林笔记</title>
+<title>✅202501015-撰写2025年湛江市义务教育小学语文新教材培训心得体会&nbsp;|&nbsp;老林笔记</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="/assets/qblog/style.css" rel="stylesheet" type="text/css" />
@@ -563,7 +563,7 @@ document.body.addEventListener('input', POWERMODE);
   <div class="breadcrumb" style="margin-top: -5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home" style="width: 10px;   width: 14px;height: 14px;vertical-align: -2px;
 "><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg><a href="/" style="padding-left: 5px;color: #7d8c8e;">首页</a>
 <span>/</span><a href="/b2/list-2.html" style="color: #7d8c8e;">继续教育</a><span>/</span>正文</div>
-<audio id="audioPlayer" controls preload style="max-width: 50%;opacity: .4;float: right;height: 24px;margin-top: -6px;" title="收听本文" src="https://dict.youdao.com/dictvoice?le=zh&audio=第三阶段 美篇2021年世行贷款村小，教学点教师全科教学能力提升培训。1，回顾九月，致用在十月，期待于十一月2，做博雅之师，育文雅学子记世行贷款村小全科教师跟岗学习第一天3，走进名师课堂，名师引领促成长4，课堂展风采，教研促成长5，2021年广东省世行贷款项目村小，教学点教师全科教学能力提升跟岗培训6，但凡交流，皆是促进。但凡学习，皆是成长7，学者如登山焉，动而益高8，整理，收获，总结，反思9，音乐悦人心，科学引深思，共研促成长10，以题促研，以行成果11，唯有不断学习，才能紧跟时代步伐12，阅读分享课堂观摩 中队活动经验分享13，心中有梦，以梦为马志存高远，不负韶华14，生无所息，梦想不弃1">
+<audio id="audioPlayer" controls preload style="max-width: 50%;opacity: .4;float: right;height: 24px;margin-top: -6px;" title="收听本文" src="https://dict.youdao.com/dictvoice?le=zh&audio=202501015撰写2025年湛江市义务教育小学语文新教材培训心得体会。2025年湛江市义务教育小学语文新教材培训上午   2025年湛江市义务教育小学语文新教材培训下午2025年湛江市义务教育小学语文新教材培训 活动安排活动日期活动时间活动内容主讲活动地点3月14日上午830855签到遂溪县遂城第四小学六楼会议室900910致欢迎辞遂溪县教育局领导待定遂溪县遂城第四小学校长王钦915955研讨课怎么都快乐黎伟英遂溪县遂城第四小学老师10051045示范课热爱中国共产党柳元中山市小榄丰华学校老师105011401热爱中国共产党说课2怎么都快乐说课3评课交流4专家点评柳元，黎伟英及线下听课老师">
   您的浏览器不支持 audio 元素。
 </audio>
 <span id="translate" style="border: 0px;cursor: pointer;float: right;color: #7d8c8e;font-size: 12px;margin-top: -5px;"></span>
@@ -571,7 +571,7 @@ document.body.addEventListener('input', POWERMODE);
     <script>
         const audioPlayer = document.getElementById('audioPlayer');
         const audioFiles = [
-            'https://dict.youdao.com/dictvoice?le=zh&audio=第三阶段 美篇2021年世行贷款村小，教学点教师全科教学能力提升培训。1，回顾九月，致用在十月，期待于十一月2，做博雅之师，育文雅学子记世行贷款村小全科教师跟岗学习第一天3，走进名师课堂，名师引领促成长4，课堂展风采，教研促成长5，2021年广东省世行贷款项目村小，教学点教师全科教学能力提升跟岗培训6，但凡交流，皆是促进。但凡学习，皆是成长7，学者如登山焉，动而益高8，整理，收获，总结，反思9，音乐悦人心，科学引深思，共研促成长10，以题促研，以行成果11，唯有不断学习，才能紧跟时代步伐12，阅读分享课堂观摩 中队活动经验分享13，心中有梦，以梦为马志存高远，不负韶华14，生无所息，梦想不弃1','https://dict.youdao.com/dictvoice?le=zh&audio=5，走进名师课堂，名师引领促成长16，怀揣教育初心，点燃星星之火17，跟岗蓄力，笃行致远18，学其道，悟其理，思己行19，智慧源于勤奋，伟大出自平凡20，感恩遇见，超越梦想21，育人追梦，过有主题的专业生活22，时光里的暖阳23，写给幸福',        ];
+            'https://dict.youdao.com/dictvoice?le=zh&audio=202501015撰写2025年湛江市义务教育小学语文新教材培训心得体会。2025年湛江市义务教育小学语文新教材培训上午   2025年湛江市义务教育小学语文新教材培训下午2025年湛江市义务教育小学语文新教材培训 活动安排活动日期活动时间活动内容主讲活动地点3月14日上午830855签到遂溪县遂城第四小学六楼会议室900910致欢迎辞遂溪县教育局领导待定遂溪县遂城第四小学校长王钦915955研讨课怎么都快乐黎伟英遂溪县遂城第四小学老师10051045示范课热爱中国共产党柳元中山市小榄丰华学校老师105011401热爱中国共产党说课2怎么都快乐说课3评课交流4专家点评柳元，黎伟英及线下听课老师','https://dict.youdao.com/dictvoice?le=zh&audio=庞彩虹湛江市教育局教学研究室小学语文教研员3月14日下午300445专题讲座新课标视域下，一年级新修订教材的解读与教学探讨蒋阳晔中山市小榄镇教育和体育事务中心教研员450500合影更新于20250317请各校赶于明天下午5点前发一篇以上学习心得到微信玉壶冰心莫岸冰老师处，以便收集上送。谢谢请黄国权副校长督促中心小完成此项工作2025年湛江市义务教育小学语文新教材培训心得体会从传统到现代，探索教育的变革与创新雷州市杨家镇倜上小学作为一名农村教师，我有幸参加了2025年湛江市义务教育小学语文新教材培训。这次培训不仅是一次知识的盛宴，更是一场思想的碰撞和智慧的升华。在这篇文章中，我将分享我的心得体会','https://dict.youdao.com/dictvoice?le=zh&audio=，并探讨如何在日常教学中更好地运用这些新的理念和方法。一，培训活动概况此次培训活动由中山市小榄镇教育和体育事务中心教研员蒋杨业主持，邀请了多位知名专家和一线教师进行示范课展示及专题讲座。活动内容丰富多样，包括研讨课，示范课，专家讲座以及点评等环节，旨在帮助教师们深入理解新教材的理念和要求，掌握新的教学策略和方法，以适应新时代教育发展的需求。二，教材修订的主要变化1，提升教材的时代性n 新教材增加了许多体现时代特点和现代意识的内容，如我爱我们的祖国，热爱中国共产党等课文，旨在从小培养学生的爱国情怀和社会责任感。n 插图设计也更加贴近现实生活，例如反映二胎政策的家庭场景，体现了教材的时代性和社会性','https://dict.youdao.com/dictvoice?le=zh&audio=。2，降低教材难度n 教材整合了原有栏目，改进了拼音识字的编排方式。例如，将口语交际整合到了语文园地中，使得口语交际的地位，教学价值及教学目标不变的同时，提升了其实践应用的重要性。n 删除了一些较难的文章，调整了课文顺序，降低了学习难度，使学生更容易接受新知识。3，落实语文课标精神n 强调以生活为基础，以语文实践活动为主线，以学习主题为引领的理念，注重听说读写的整合，强调语言文化应用能力，思维能力和审美创造的全面发展。4，目录的变化n 将原本的课文单元调整为阅读单元，突出了阅读的重要性及其多元化的内涵。通过这种方式，更加强调理解和领悟的过程，有助于提高学生的语文实践能力。三，具体实施策略1，趣','https://dict.youdao.com/dictvoice?le=zh&audio=味识字教学n 采用多种识字方法，如猜字谜，字理识字，看图识字等，激发学生的学习兴趣。比如，在教授象形字时，可以通过建立甲骨文与现代汉字之间的联系来加深记忆。n 利用游戏化教学手段，如采合叶，做你猜汉字拍拍乐等活动，增加课堂互动性和趣味性。2，层次分明的教学设计n 在识字教学过程中，应遵循音形义用四个维度的原则，逐步深化对汉字的理解和运用。n 设计递进式的教学环节，从单个汉字的认知过渡到词汇的应用，再到短语和句子的构建，最终达到全面掌握的目的。3，关注拓展实践活动n 新教材增加了拓展活动部分，鼓励学生在完成单元学习后进行回顾交流，深化对单元主题的理解。n 结合实际生活情境设计相关任务，让学生在实','https://dict.youdao.com/dictvoice?le=zh&audio=践中巩固所学知识，培养解决问题的能力。四，个人感悟与展望参加此次培训，让我深刻认识到教育改革不仅是教材形式上的更新换代，更是教育理念的根本转变。作为一线教师，我们需要紧跟时代的步伐，不断学习和吸收先进的教育教学理论，努力提升自身素质，才能更好地服务于学生的发展需求。未来的工作中，我计划将本次培训中学到的新方法融入日常教学中，特别是针对低年级学生的识字教学，尝试更多元化的教学模式，激发孩子们的学习兴趣同时，在课堂上注重培养学生的综合素质，促进其全面发展。我相信，只要我们每一位教育工作者都能秉持这样的信念前行，定能共同书写出更加辉煌的小学语文教育新篇章',        ];
         let currentTrack = 0;
 
         // 点击播放按钮时开始播放
@@ -610,35 +610,45 @@ document.body.addEventListener('input', POWERMODE);
     <div id="main1">         
 <div id="article">
 <div  id="printview">
-<h1>（第三阶段 美篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h1><div class="text">
-<a href="https://www.meipian.cn/3wa19guu" target="_blank">1、回顾九月，致用在十月，期待于十一月</a><br><br>
-<a href="https://www.meipian.cn/3vsp0ybc" target="_blank">2、“做博雅之师、育文雅学子”——记世行贷款村小全科教师跟岗学习第一天</a><br><br>
-<a href="https://www.meipian.cn/3vvo4dzb" target="_blank">3、走进名师课堂，名师引领促成长</a><br><br>
-<a href="https://www.meipian.cn/3vxu8b3v" target="_blank">4、课堂展风采，教研促成长</a><br><br>
-<a href="https://www.meipian.cn/3vzvhpyz" target="_blank">5、2021年广东省世行贷款项目村小、教学点教师全﻿科教学能力提升跟岗培训</a><br><br>
-<a href="https://www.meipian.cn/3w2ejpyw" target="_blank">6、但凡交流，皆是促进。但凡学习，皆是成长</a><br><br>
-<a href="https://www.meipian.cn/3w403h8e" target="_blank">7、学者如登山焉，动而益高</a><br><br>
-<a href="https://www.meipian.cn/3w6hhhm3" target="_blank">8、整理、收获，总结、反思</a><br><br>
-<a href="https://www.meipian.cn/3w7ws8ph" target="_blank">9、“音乐”悦人心，“科学”引深思，共研促成长</a><br><br>
-<a href="https://www.meipian.cn/3wa9eu7d" target="_blank">10、以题促研，以行成果</a><br><br>
-<a href="https://www.meipian.cn/3wc14cj0" target="_blank">11、唯有不断学习，才能紧跟时代步伐</a><br><br>
-<a href="https://www.meipian.cn/3wcsg9he" target="_blank">12、阅读分享课堂观摩 中队活动经验分享</a><br><br>
-<a href="https://www.meipian.cn/3wgst0jc" target="_blank">13、心中有梦，以梦为马；志存高远，不负韶华</a><br><br>
-<a href="https://www.meipian.cn/3wiffcdr" target="_blank">14、生无所息，梦想不弃</a><br><br>
-<a href="https://www.meipian.cn/3wnrwxjg" target="_blank">15、走进名师课堂，名师引领促成长</a><br><br>
-<a href="https://www.meipian.cn/3wmsh50n" target="_blank">16、怀揣教育初心，点燃星星之火</a><br><br>
-<a href="https://www.meipian.cn/3wmqpckq" target="_blank">17、跟岗蓄力，笃行致远</a><br><br>
-<a href="https://www.meipian.cn/3wptabya" target="_blank">18、学其道、悟其理、思己行</a><br><br>
-<a href="https://www.meipian.cn/3wrd5xor" target="_blank">19、智慧源于勤奋，伟大出自平凡</a><br><br>
-<a href="https://www.meipian.cn/3wula5s6" target="_blank">20、感恩遇见，超越梦想</a><br><br>
-<a href="https://www.meipian.cn/3wxpuya8" target="_blank">21、育人追梦，过有主题的专业生活</a><br><br>
-<a href="https://www.meipian.cn/3x86qqti" target="_blank">22、时光里的暖阳</a><br><br>
-<a href="https://www.meipian.cn/3xftd5et" target="_blank">23、写给幸福</a></div>
+<h1>✅202501015-撰写2025年湛江市义务教育小学语文新教材培训心得体会</h1><div class="text">
+<div class="ImgLazyLoad-circle" style="display: none;"></div><img data-fancybox="gallery" img-src="/assets/file/2025/03/20250317.webp" data-extentions-extra-ocr-id="760334ed99ae4c3fd0aa0e4e81ad2854" src="/assets/file/2025/03/20250317.webp" class="ImgLoaded">
+<p><a href="https://live.wenxiang.cn/livepf/playvideo.jspx?id=0c8a33a446e94220890b33e9b07f2c67" rel="nofollow">2025年湛江市义务教育小学语文新教材培训(上午)</a>  | <a href="https://live.wenxiang.cn/livepf/playvideo.jspx?id=6f7b8bb3f2c74f0ca91fd358c987fe9d" rel="nofollow">2025年湛江市义务教育小学语文新教材培训(下午)</a></p>
+<center><strong>2025年湛江市义务教育小学语文新教材培训<br> 活动安排</strong><br></center><table border="1" style="border-collapse: collapse;font-size: 14px;width: 100%;display: inline-table;"><tbody><tr><td style="text-align: center;width: 100px;">活动日期</td><td style="width: 100px;text-align: center;">活动时间</td><td style="text-align: center;">活动内容</td><td style="text-align: center;">主讲</td><td style="text-align: center;">活动地点</td></tr><tr><td rowspan="5" style="text-align: center;">3月14日<br>上午</td><td style="text-align: center;">8:30-8:55</td><td>签到</td><td></td><td rowspan="7">遂溪县遂城第四小学六楼会议室</td></tr><tr><td style="text-align: center;">9:00-9:10</td><td>致欢迎辞</td><td>遂溪县教育局领导(待定)遂溪县遂城第四小学校长王钦</td></tr><tr><td style="text-align: center;">9:15-9:55</td><td>研讨课：《怎么都快乐》</td><td>黎伟英<br>(遂溪县遂城第四小学老师)</td></tr><tr><td style="text-align: center;">10:05-10:45</td><td>示范课：《热爱中国共产党》</td><td>柳元<br>(中山市小榄丰华学校老师)</td></tr><tr><td>10:50-11:40</td><td>1.《热爱中国共产党》说课；<br>2.《怎么都快乐》说课；<br>3.评课交流；4.专家点评</td><td>柳元、黎伟英及线下听课老师<br>庞彩虹<br>(湛江市教育局教学研究室小学语文教研员)</td></tr><tr><td rowspan="2" style="text-align: center;">3月14日<br>下午</td><td style="text-align: center;">3:00-4:45</td><td>专题讲座：《新课标视域下，一年级新修订教材的解读与教学探讨》</td><td>蒋阳晔<br>(中山市小榄镇教育和体育事务中心教研员)</td></tr><tr><td style="text-align: center;">4:50-5:00</td><td colspan="2">合影</td></tr></tbody></table>
+<p>更新于2025.03.17</p>
+<p>请各校赶于明天下午5点前发一篇以上学习心得到微信玉壶冰心@（莫岸冰老师）处，以便收集上送。谢谢！（请黄国权副校长督促中心小完成此项工作）</p>
+<center><span style="font-size: 20px;font-weight: 600;">2025年湛江市义务教育小学语文新教材培训心得体会</span><br><span style="font-size: 18px;">——从传统到现代，探索教育的变革与创新</span><br><span>雷州市杨家镇倜上小学</span></center>
+<p>作为一名农村教师，我有幸参加了2025年湛江市义务教育小学语文新教材培训。这次培训不仅是一次知识的盛宴，更是一场思想的碰撞和智慧的升华。在这篇文章中，我将分享我的心得体会，并探讨如何在日常教学中更好地运用这些新的理念和方法。</p>
+<h3 id="一、培训活动概况">一、培训活动概况</h3>
+<p>此次培训活动由中山市小榄镇教育和体育事务中心教研员蒋杨业主持，邀请了多位知名专家和一线教师进行示范课展示及专题讲座。活动内容丰富多样，包括研讨课、示范课、专家讲座以及点评等环节，旨在帮助教师们深入理解新教材的理念和要求，掌握新的教学策略和方法，以适应新时代教育发展的需求。</p>
+<h3 id="二、教材修订的主要变化">二、教材修订的主要变化</h3>
+<h4 id="1、提升教材的时代性">1、提升教材的时代性</h4>
+<p>n 新教材增加了许多体现时代特点和现代意识的内容，如《我爱我们的祖国》、《热爱中国共产党》等课文，旨在从小培养学生的爱国情怀和社会责任感。</p>
+<p>n 插图设计也更加贴近现实生活，例如反映二胎政策的家庭场景，体现了教材的时代性和社会性。</p>
+<h4 id="2、降低教材难度">2、降低教材难度</h4>
+<p>n 教材整合了原有栏目，改进了拼音识字的编排方式。例如，将口语交际整合到了语文园地中，使得口语交际的地位、教学价值及教学目标不变的同时，提升了其实践应用的重要性。</p>
+<p>n 删除了一些较难的文章，调整了课文顺序，降低了学习难度，使学生更容易接受新知识。</p>
+<h4 id="3、落实语文课标精神">3、落实语文课标精神</h4>
+<p>n 强调“以生活为基础，以语文实践活动为主线，以学习主题为引领”的理念，注重听说读写的整合，强调语言文化应用能力、思维能力和审美创造的全面发展。</p>
+<h4 id="4、目录的变化">4、目录的变化</h4>
+<p>n 将原本的“课文单元”调整为“阅读单元”，突出了阅读的重要性及其多元化的内涵。通过这种方式，更加强调理解和领悟的过程，有助于提高学生的语文实践能力。</p>
+<h3 id="三、具体实施策略">三、具体实施策略</h3>
+<h4 id="1、趣味识字教学">1、趣味识字教学</h4>
+<p>n 采用多种识字方法，如猜字谜、字理识字、看图识字等，激发学生的学习兴趣。比如，在教授象形字时，可以通过建立甲骨文与现代汉字之间的联系来加深记忆。</p>
+<p>n 利用游戏化教学手段，如采合叶、做你猜汉字拍拍乐等活动，增加课堂互动性和趣味性。</p>
+<h4 id="2、层次分明的教学设计">2、层次分明的教学设计</h4>
+<p>n 在识字教学过程中，应遵循音形义用四个维度的原则，逐步深化对汉字的理解和运用。</p>
+<p>n 设计递进式的教学环节，从单个汉字的认知过渡到词汇的应用，再到短语和句子的构建，最终达到全面掌握的目的。</p>
+<h4 id="3、关注拓展实践活动">3、关注拓展实践活动</h4>
+<p>n 新教材增加了拓展活动部分，鼓励学生在完成单元学习后进行回顾交流，深化对单元主题的理解。</p>
+<p>n 结合实际生活情境设计相关任务，让学生在实践中巩固所学知识，培养解决问题的能力。</p>
+<h3 id="四、个人感悟与展望">四、个人感悟与展望</h3>
+<p>参加此次培训，让我深刻认识到教育改革不仅是教材形式上的更新换代，更是教育理念的根本转变。作为一线教师，我们需要紧跟时代的步伐，不断学习和吸收先进的教育教学理论，努力提升自身素质，才能更好地服务于学生的发展需求。</p>
+<p>未来的工作中，我计划将本次培训中学到的新方法融入日常教学中，特别是针对低年级学生的识字教学，尝试更多元化的教学模式，激发孩子们的学习兴趣；同时，在课堂上注重培养学生的综合素质，促进其全面发展。我相信，只要我们每一位教育工作者都能秉持这样的信念前行，定能共同书写出更加辉煌的小学语文教育新篇章！</p></div>
 <div class="readall_box">
           <div class="read_more_mask"></div>
           <a class="read_more_btn" target="_self">阅读全文 <i class="fa fa-angle-down" aria-hidden="true" style="font-size: 18px; color: #ca0c16;vertical-align:middle;"></i></a>
       </div>
-<p class="time clb">继续教育 2022-01-10 21:55:11 通过 网页 <i class="iconfont icon-view"></i> 浏览(1879) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2025-03-18 22:56:59 通过 网页 <i class="iconfont icon-view"></i> 浏览(1) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
@@ -648,13 +658,13 @@ document.body.addEventListener('input', POWERMODE);
 <p style="color: #999;"><i class="fa fa-angle-left em12" style="color: #d0d0d0;"></i>
 <i class="fa fa-angle-left em12 mr6" style="margin-right: 6px;color: #d0d0d0;"></i>
 上一篇</p>
-<a class="pre" href="/b2/716.html"><div style="height: 3.2em;overflow: hidden;">（第二阶段 美篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</div></a></div>
+<a class="pre" href="/b6/1090.html"><div style="height: 3.2em;overflow: hidden;">✅202501014-国家中小学智慧教育平台培训</div></a></div>
 
 <div id="predown">
 <p style="color: #999;">下一篇
 <i class="fa fa-angle-right em12 ml6" style="margin-left: 6px;color: #d0d0d0;"></i>
 <i class="fa fa-angle-right em12" style="color: #d0d0d0;"></i></p>
-<a class="next" href="/b2/718.html"><div style="height: 3.2em;overflow: hidden;">（结业证书）2021年世行贷款村小、教学点教师全科教学能力提升培训</div></a></div>
+<a class="next" href="/b6/1092.html"><div style="height: 3.2em;overflow: hidden;">✅202501016-填报“流动儿童”和“留守儿童”基本情况表 学校工作</div></a></div>
 </div>
 <!-- 上一篇 下一篇 结束-->
    <div id="comments">
@@ -669,7 +679,7 @@ document.body.addEventListener('input', POWERMODE);
 <div class="s_e"><input name="pmail" tabindex="2" placeholder="邮箱(选填)" id="pmail" type="email" class="input_narrow" value="" maxlength="30" /></div>
 <div class="s_e"><input name="purl" tabindex="3" placeholder="网址(选填)" id="purl" type="url" class="input_narrow" value="" maxlength="50" /><input type="hidden" id="tid" name="tid" value="2"></div>
 </div>
-	 	 <div class="s_e"><button type="button" onClick="addpl('717','0')" id="add" class="btn"> 提 交 </button> <button type="button" onClick="history.back();" id="bck" class="btn"> 返 回 </button><span id="errmsg"></span></div>
+	 	 <div class="s_e"><button type="button" onClick="addpl('1091','0')" id="add" class="btn"> 提 交 </button> <button type="button" onClick="history.back();" id="bck" class="btn"> 返 回 </button><span id="errmsg"></span></div>
      </form></div>	
         </div>	
     </div>
