--- a/1091.html
+++ b/1091.html
@@ -336,7 +336,18 @@ document.body.addEventListener('input', POWERMODE);
             }
             // -->
         </script>
-        <!-- 距离 63 岁 --></div>
+        <!-- 距离 63 岁 -->
+
+<style type="text/css">
+	#live2d {
+    width: 222px;
+    height: 222px;
+}
+#waifu-tips {
+    width: 222px;
+    margin-left: 0px;
+}
+</style></div>
 	   <form method="get" class="search-form" action="https://linji.cn/index.php"> <input class="search-text" name="s" autocomplete="on" placeholder="输入关键词搜索..." required="required" type="text" value=""> <button class="search-submit" alt="搜索" type="submit">搜索</button></form>
 	   </div>   
 </div>
@@ -648,7 +659,7 @@ document.body.addEventListener('input', POWERMODE);
           <div class="read_more_mask"></div>
           <a class="read_more_btn" target="_self">阅读全文 <i class="fa fa-angle-down" aria-hidden="true" style="font-size: 18px; color: #ca0c16;vertical-align:middle;"></i></a>
       </div>
-<p class="time clb">继续教育 2025-03-18 22:56:59 通过 网页 <i class="iconfont icon-view"></i> 浏览(1) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2025-03-18 22:56:59 通过 网页 <i class="iconfont icon-view"></i> 浏览(31) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
@@ -664,7 +675,7 @@ document.body.addEventListener('input', POWERMODE);
 <p style="color: #999;">下一篇
 <i class="fa fa-angle-right em12 ml6" style="margin-left: 6px;color: #d0d0d0;"></i>
 <i class="fa fa-angle-right em12" style="color: #d0d0d0;"></i></p>
-<a class="next" href="/b6/1092.html"><div style="height: 3.2em;overflow: hidden;">✅202501016-填报“流动儿童”和“留守儿童”基本情况表 学校工作</div></a></div>
+<a class="next" href="/b6/1092.html"><div style="height: 3.2em;overflow: hidden;">✅202501016-填报“流动儿童”和“留守儿童”基本情况表</div></a></div>
 </div>
 <!-- 上一篇 下一篇 结束-->
    <div id="comments">
